--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>HELLO GIT WORLD</h1>
-    
+    <input type="text" name="research" id="research"
+    placeholder="effectuer une resherche sur ISTA git ou saissiserun URL">
 </body>
 </html>
