--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>HELLO GIT WORLD</h1>
     <input type="text" name="research" id="research"
     placeholder="effectuer une resherche sur ISTA git ou saissiserun URL">
+    <a href="about.html">a propros de nous</a>
 </body>
 </html>
