--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <input type="text" name="research" id="research"
     placeholder="effectuer une resherche sur ISTA git ou saissiserun URL">
     <a href="about.html">a propros de nous</a>
+    <script src="fichier.js"></script>
 </body>
 </html>
